--- a/helm/videos-app-backend/templates/backend-service.yaml
+++ b/helm/videos-app-backend/templates/backend-service.yaml
@@ -2,10 +2,15 @@ apiVersion: v1
 kind: Service
 metadata:
    name: {{ .Release.Name }}-backend-service
+   labels:
+    app: backend
 spec:
   selector:
     app: backend
   ports:
   - port: 80
+    name: backend
     targetPort: 4000
-  type: LoadBalancer
+    name: http
+    protocol: TCP
+  
