--- a/helm/videos-app-backend/templates/database-configmap.yaml
+++ b/helm/videos-app-backend/templates/database-configmap.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-database-configmap
 data:
-  db_user: {{ .Values.database.user }}
+  db_user: "{{ .Values.database.user }}"
   db_host:  {{ .Values.database.host }}
-  pg_port:  {{ .Values.database.port }}
+  pg_port:  "{{ .Values.database.port }}"
   database: {{ .Values.database.database }}
